and ofcourse as i say its right in my face i figure out the issue. i was using css syntax instead of scss which was causing in issue as the syntax issue was only on the isflipped which makes sense. now all cards flip independently when you click on then, and then flip back on another click. very happy with this one. still more spacing, font type and other minor styles to go on the cards but the hardest part, i think, is now done.

--- a/src/Styles/dayCardStyles.scss
+++ b/src/Styles/dayCardStyles.scss
@@ -9,9 +9,12 @@
     display: flex;
     width: 100%;
     height: 40vh;
+    justify-content: space-evenly;
+
+    // card 1
 
     .weather-card-inner-0 {
-        width: 200px;
+        width: 25vw;
         height: 100%;
         transition: 1s;
         transform-style: preserve-3d;
@@ -29,8 +32,11 @@
         }
 
         .weather-card-front {
-            background-color: aqua;
-            color: red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            font-size: 2em;
         }
 
         .weather-card-back {
@@ -47,8 +53,8 @@
             }
         }
     }
-    .weather-card-inner-0.isflipped {
-        width: 200px;
+    .weather-card-inner-0-isflipped {
+        width: 25vw;
         height: 100%;
         transition: 1s;
         transform-style: preserve-3d;
@@ -67,15 +73,18 @@
         }
 
         .weather-card-front {
-            background-color: aqua;
-            color: red;
-            transform: rotateY(180deg);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            font-size: 2em;
         }
 
         .weather-card-back {
             background-image: linear-gradient(to bottom left, rgb(231, 102, 102) 10%, rgb(229, 231, 87) 115%);
             height: 100%;
             border-radius: 25px;
+            transform: rotateY(180deg);
 
             .weather-card-text {
                 padding: 1%;
@@ -86,17 +95,171 @@
         }
     }
 
+    // card 2
+
     .weather-card-inner-1 {
-        
+        width: 25vw;
+        height: 100%;
+        transition: 1s;
+        transform-style: preserve-3d;
+        cursor: pointer;
+        position: relative;
+
+        .card__face {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            overflow: hidden;
+            border-radius: 25px;
+            box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+        }
+
+        .weather-card-front {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            font-size: 2em;
+        }
+
+        .weather-card-back {
+            background-image: linear-gradient(to bottom left, rgb(231, 102, 102) 10%, rgb(229, 231, 87) 115%);
+            height: 100%;
+            border-radius: 25px;
+            transform: rotateY(180deg);
+
+            .weather-card-text {
+                padding: 1%;
+                font-size: 1.5em;
+                font-weight: 700;
+                color: bisque;
+            }
+        }
     }
-    .weather-card-inner-1.isflipped {
-        
+    .weather-card-inner-1-isflipped {
+        width: 25vw;
+        height: 100%;
+        transition: 1s;
+        transform-style: preserve-3d;
+        cursor: pointer;
+        position: relative;
+        transform: rotateY(180deg);
+
+        .card__face {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            overflow: hidden;
+            border-radius: 25px;
+            box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+        }
+
+        .weather-card-front {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            font-size: 2em;
+        }
+
+        .weather-card-back {
+            background-image: linear-gradient(to bottom left, rgb(231, 102, 102) 10%, rgb(229, 231, 87) 115%);
+            height: 100%;
+            border-radius: 25px;
+            transform: rotateY(180deg);
+
+            .weather-card-text {
+                padding: 1%;
+                font-size: 1.5em;
+                font-weight: 700;
+                color: bisque;
+            }
+        }
     }
 
+    // card 3
+
     .weather-card-inner-2 {
-        
+        width: 25vw;
+        height: 100%;
+        transition: 1s;
+        transform-style: preserve-3d;
+        cursor: pointer;
+        position: relative;
+
+        .card__face {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            overflow: hidden;
+            border-radius: 25px;
+            box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+        }
+
+        .weather-card-front {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            font-size: 2em;
+        }
+
+        .weather-card-back {
+            background-image: linear-gradient(to bottom left, rgb(231, 102, 102) 10%, rgb(229, 231, 87) 115%);
+            height: 100%;
+            border-radius: 25px;
+            transform: rotateY(180deg);
+
+            .weather-card-text {
+                padding: 1%;
+                font-size: 1.5em;
+                font-weight: 700;
+                color: bisque;
+            }
+        }
     }
-    .weather-card-inner-2.isflipped {
-        
+    .weather-card-inner-2-isflipped {
+        width: 25vw;
+        height: 100%;
+        transition: 1s;
+        transform-style: preserve-3d;
+        cursor: pointer;
+        position: relative;
+        transform: rotateY(180deg);
+
+        .card__face {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            overflow: hidden;
+            border-radius: 25px;
+            box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+        }
+
+        .weather-card-front {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            font-size: 2em;
+        }
+
+        .weather-card-back {
+            background-image: linear-gradient(to bottom left, rgb(231, 102, 102) 10%, rgb(229, 231, 87) 115%);
+            height: 100%;
+            border-radius: 25px;
+            transform: rotateY(180deg);
+
+            .weather-card-text {
+                padding: 1%;
+                font-size: 1.5em;
+                font-weight: 700;
+                color: bisque;
+            }
+        }
     }
 }
